[gd_scene load_steps=6 format=3 uid="uid://ccnrwji4dp8rl"]

[ext_resource type="Script" path="res://features/main_game/UI/UI.gd" id="1_qcesi"]
[ext_resource type="Texture2D" uid="uid://b1iaeeaty2grx" path="res://features/main_game/UI/assets/toggle-sidebar.svg" id="2_1wlll"]
[ext_resource type="PackedScene" uid="uid://cywpj0ki4ld5j" path="res://scenes/guis/pause_button.tscn" id="2_c50ox"]
[ext_resource type="PackedScene" uid="uid://dv4k83q2oyppm" path="res://features/main_game/UI/trait_menu/trait_menu.tscn" id="2_cmehw"]
[ext_resource type="PackedScene" uid="uid://x512garedn3u" path="res://features/main_game/UI/traits/trait.tscn" id="3_t7nr0"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_qcesi")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer/PanelContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="PauseButton" parent="VBoxContainer/MarginContainer/PanelContainer/MarginContainer/HBoxContainer2" instance=ExtResource("2_c50ox")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="Control" type="Control" parent="VBoxContainer/MarginContainer/PanelContainer/MarginContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StartLevel" type="Button" parent="VBoxContainer/MarginContainer/PanelContainer/MarginContainer/HBoxContainer2"]
layout_mode = 2
text = "Start"

[node name="ToggleTraitMenu" type="Button" parent="VBoxContainer/MarginContainer/PanelContainer/MarginContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.05
toggle_mode = true
button_pressed = true
icon = ExtResource("2_1wlll")
icon_alignment = 1
expand_icon = true

[node name="HBoxContainer" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="Spacer" type="Control" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0
theme_override_constants/margin_bottom = 20

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/MarginContainer/PanelContainer"]
layout_mode = 2

[node name="TraitMenu" parent="VBoxContainer/HBoxContainer/MarginContainer/PanelContainer/MarginContainer" instance=ExtResource("2_cmehw")]
layout_mode = 2

[node name="Trait" parent="VBoxContainer/HBoxContainer/MarginContainer/PanelContainer/MarginContainer/TraitMenu" instance=ExtResource("3_t7nr0")]
layout_mode = 2
text = "Trait 1"

[node name="Trait2" parent="VBoxContainer/HBoxContainer/MarginContainer/PanelContainer/MarginContainer/TraitMenu" instance=ExtResource("3_t7nr0")]
layout_mode = 2
text = "Trait 2"

[connection signal="pressed" from="VBoxContainer/MarginContainer/PanelContainer/MarginContainer/HBoxContainer2/StartLevel" to="." method="_on_start_level_pressed"]
[connection signal="toggled" from="VBoxContainer/MarginContainer/PanelContainer/MarginContainer/HBoxContainer2/ToggleTraitMenu" to="." method="_on_toggle_trait_menu_toggled"]
